--- a/site/sites/all/themes/sunrise/css/style.css
+++ b/site/sites/all/themes/sunrise/css/style.css
@@ -118,7 +118,7 @@ thead tr th, thead tr td, tbody tr th, tbody tr td { padding: 8px; line-height: 
     width: 36px;
     height: 36px;
     margin-top: 0px;
-    background: url(../images/social.png) no-repeat;
+    background: url(../images/local//social.png) no-repeat;
     text-indent: -999em;
     opacity: 0.5;
 }
