--- a/site/sites/all/themes/sunrise/css/style.css
+++ b/site/sites/all/themes/sunrise/css/style.css
@@ -49,10 +49,22 @@ h6 { font-size: 16px }
 
 h1.page-title { font-size: 32px; }
 
-.title-sep, #pre-header h2, #promoted h2, .sidebar h2, #footer h2 { clear: both; font-size: 16px; margin-bottom: 40px; position: relative; }
+.title-sep, #pre-header h2, #promoted h2, .sidebar h2 { 
+    clear: both; 
+    font-size: 16px; 
+    margin-bottom: 40px; 
+    position: relative; 
+}
 
-.title-sep:after, #pre-header h2:after, #promoted h2:after, .sidebar h2:after, #footer h2:after { background-color: #444; content: ""; display: block; height: 4px; width: 20px; 
-position: absolute; bottom: -15px; left: 0; }
+.title-sep:after, #pre-header h2:after, #promoted h2:after, .sidebar h2:after { 
+    background-color: #444; 
+    content: ""; 
+    display: block; 
+    height: 4px; 
+    width: 20px; 
+    position: absolute; 
+    bottom: -15px; left: 0; 
+}
 
 .title-sep .glyphicon { font-size: 13px; padding-right: 18px; }
 
@@ -249,16 +261,44 @@ display: none; }
 
 #bottom-content { padding: 40px 0 20px 0; }
 
+/*footer*/
 #footer { 
-    background-color: #fcfcfc; 
-    border-top: 1px solid #eaeaea; 
-    border-bottom: 1px solid #eaeaea; 
-    margin-bottom: 1px; 
-    padding: 60px 0 30px; 
+    clear: both;
+    padding: 20px 0;
+    overflow: hidden;
+    margin: 0 auto;
+    background: #111111;
+    color: #999;
 }
 
-#footer block { padding: 0 0 30px 0; clear: both; }
+#footer ul li {
+    list-style-type: none;
+    border-bottom: none;
+}
 
+#footer table {
+    border: none;
+}
+
+#footer tr {
+    border-bottom: none;
+}
+
+#footer h2 {
+    font-family: 'Open Sans', sans-serif;
+    line-height: 36px;
+    font-size: 20px;
+    color: #E54D1B;
+    margin-bottom: 40px;
+}
+
+#footer a {
+    font-weight: 600;
+    color: #fff;
+
+}
+
+/*subfooter*/
 #subfooter { 
 	background: #222;
 	clear: both;
@@ -422,8 +462,6 @@ position: absolute; top: 20px; right: 17px; font-size: 11px; font-weight: 400; }
 
 .node header { padding: 10px 40px 20px; }
 
-.node footer { padding: 20px 40px 40px; }
-
 .field-name-field-image { margin: 10px 0 20px; }
 
 .node .user-signature { font-size: 12px; padding: 0; }
@@ -449,8 +487,6 @@ position: absolute; top: 20px; right: 17px; font-size: 11px; font-weight: 400; }
 
 /* Taxonomy term reference */
 .field-type-taxonomy-term-reference { position: relative; } 
-
-footer .field-type-taxonomy-term-reference { float: left; }
 
 .field-type-taxonomy-term-reference .field-label { font-weight: 400; }
 
@@ -575,30 +611,6 @@ color: #000; position: relative; z-index: 1; height: 52px; margin: 0; padding: 1
 .call-to-action .btn:hover { opacity: 0.90; filter: alpha(opacity=90); }
 
 .call-to-action .btn:active{ -webkit-box-shadow: inset 0 2px 2px rgba(0,0,0,0.5); -moz-box-shadow: inset 0 2px 2px rgba(0,0,0,0.5); box-shadow: inset 0 2px 2px rgba(0,0,0,0.5); }
-
-/*Recent Content block*/
-#block-node-recent .node-title a { color: #444444; font-size: 16px; font-weight: 700; }
-
-#bottom-content .node-title a { color: #ffffff; }
-
-#pre-header .node-title a { color: #aaaaaa; }
-
-#block-node-recent .node-title a:hover { text-decoration: none; }
-
-#block-node-recent .node-author { margin: 5px 0; }
-
-#block-node-recent table { border: none; }
-
-#block-node-recent tr.even, 
-#block-node-recent tr.odd { border-bottom: 1px dashed #ddd; margin-bottom: 0; padding: 15px 0; }
-
-#block-node-recent tbody th,
-#block-node-recent tbody td { padding:8px 8px 8px 0; line-height: 1.428571429; vertical-align: top;  border: none; font-size: 13px;}
-
-#block-node-recent tbody tr:first-child th,
-#block-node-recent tbody tr:first-child td { padding-top: 0; }
-
-#block-node-recent tbody tr:last-child { border-bottom:none; }
 
 /*highlighted blocks*/
 .highlighted-block, #block-user-login, #block-poll-recent { overflow: hidden; padding:25px; -webkit-border-radius: 6px;  -moz-border-radius: 6px; border-radius: 6px; }
