--- a/site/sites/all/themes/sunrise/css/style.css
+++ b/site/sites/all/themes/sunrise/css/style.css
@@ -261,6 +261,29 @@ display: none; }
 
 #bottom-content { padding: 40px 0 20px 0; }
 
+/*promoted-insied*/
+#promoted-inside a.post_read_more {
+    margin: 20px auto;
+    color: #fff;
+    text-transform: uppercase;
+    font-family: 'Open Sans',Sans-Serif;
+    font-size: 16px;
+    font-weight: bold;
+    text-shadow: 1px 1px rgba(0,0,0, .5);
+    background: #D93600 url(img/bg_button.png) 50% 50% repeat-x;
+    display: block;
+    width: 200px;
+    border: 0;
+    padding: 10px 30px;
+    text-align: center;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    -webkit-box-shadow: 0px 0px 5px rgba(0,0,0, 0.3);
+    -moz-box-shadow: 0px 0px 5px rgba(0,0,0, 0.3);
+    box-shadow: 0px 0px 5px rgba(0,0,0, 0.3);
+    cursor: pointer;
+}
 /*footer*/
 #footer { 
     clear: both;
