--- a/site/sites/all/themes/sunrise/css/style.css
+++ b/site/sites/all/themes/sunrise/css/style.css
@@ -191,13 +191,48 @@ thead tr th, thead tr td, tbody tr th, tbody tr td { padding: 8px; line-height: 
 	font-weight: 100;
 }
 
+/* Navigation */
+
 #main-navigation { 
+    background: url(../images/local/bg_nav.png) top left repeat;
+    padding: 3px 0;
+    margin-top: 20px;
+    line-height: 36px;
+}
+
+#main-navigation-inside {
     border-top: 1px dashed #999;
     border-bottom: 1px dashed #999;
     margin: 0 auto;
     padding: 0;
     line-height: 36px;
-    text-align: center; 
+    text-align: center;
+}
+
+#main-navigation-inside ul.menu li {
+	display: inline-block;
+	padding: 0 15px;
+	font-size: 14px;
+	font-weight: 700;
+    text-transform: uppercase;
+    transition:none;
+}
+
+#main-navigation-inside ul.menu li a {
+	padding: 21px 5px;
+	color: #ddd;
+	text-decoration: none;
+	transition:none;
+}
+
+#main-navigation-inside ul.menu li a span {
+	font-family: Georgia, serif;
+	font-style: italic;
+	font-weight: normal;
+}
+
+#main-navigation-inside ul.menu li a:hover, #main-navigation-inside ul.menu li.current-menu-item a, #main-navigation-inside ul.menu li.current_page_item a {
+	color: #fff;
 }
 
 /* Responsive Grids */
