--- a/site/sites/all/themes/sunrise/css/style.css
+++ b/site/sites/all/themes/sunrise/css/style.css
@@ -385,7 +385,6 @@ display: none; }
 	-moz-box-shadow: 0px 0px 7px rgba(0,0,0, 0.3);
 	box-shadow: 0px 0px 7px rgba(0,0,0, 0.3);
 	background-position: 50% 70%;
-	color: #fff;
 }
 /*main*/
 
@@ -437,6 +436,23 @@ display: none; }
 
 #map-anchor a.collapsed:after {
 	content: " ▴ ";
+}
+
+/* contact-map*/
+#contact-map{
+	background: #fff;
+	padding-bottom:30px;
+	border:1px solid #ddd;
+	padding:10px;
+	min-height: 320px;
+	height: 320px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+}
+#contact-map iframe{
+    border:none;
+    height: 100%;
 }
 
 /* footer */
@@ -674,8 +690,6 @@ position: absolute; top: 20px; right: 17px; font-size: 11px; font-weight: 400; }
 }
 
 /*node*/
-.node.node-teaser, .page-node- #content-wrapper, .page-contact #content-wrapper { background-color: #fcfcfc; border: 1px solid #eaeaea; margin-bottom: 30px; 
--webkit-border-radius: 6px; -moz-border-radius: 6px; border-radius: 6px; }
 
 .node header h2 a:hover { text-decoration: none; }
 
@@ -746,10 +760,28 @@ th.active img { margin: -4px 0 0 5px; }
 input:focus, input[type="button"], input[type="reset"] { -webkit-transition: all 0.3s ease-in-out; 
 -moz-transition: all 0.3s ease-in-out; -ms-transition: all 0.3s ease-in-out; -o-transition: all 0.3s ease-in-out; transition: all 0.3s ease-in-out; }
 
-input.form-text, textarea.form-textarea, select { background-color: #fcfcfc; border: 2px solid #eaeaea; color: #999999; font-size: 14px; padding: 14px; width: 100%; 
-min-height: 50px; -webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px;} 
+input.form-text, textarea.form-textarea, select { 
+    background-color: #fcfcfc; 
+    border: 2px solid #eaeaea; 
+    color: #999999; 
+    font-size: 14px; 
+    padding: 14px; 
+    width: 100%; 
+    min-height: 50px; 
+    -webkit-box-shadow: none; 
+    -moz-box-shadow: none; 
+    box-shadow: none; 
+    -webkit-border-radius: 3px; 
+    -moz-border-radius: 3px; 
+    border-radius: 3px;
+} 
 
-input.form-text:focus, textarea.form-textarea:focus { background-color: #fff; outline: none; -webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none; }
+input.form-text:focus, textarea.form-textarea:focus { 
+    background-color: #fff; 
+    outline: none; 
+    -webkit-box-shadow: none; 
+    -moz-box-shadow: none; 
+    box-shadow: none; }
 
 .search-form input.form-text { width: 70%; }
 
