--- a/site/sites/all/themes/sunrise/css/style.css
+++ b/site/sites/all/themes/sunrise/css/style.css
@@ -94,7 +94,7 @@ thead tr th, thead tr td, tbody tr th, tbody tr td { padding: 8px; line-height: 
 #header { 
     margin: 0 auto;
 	padding:30px 0 0;
-	z-index: 1000;
+	/*z-index: 1000;*/
 	width: 100%;
 	position: relative;
 }
@@ -158,7 +158,8 @@ thead tr th, thead tr td, tbody tr th, tbody tr td { padding: 8px; line-height: 
     background-image: url(../images/local/sunrise_background1.jpg);
     background-attachment: fixed;
     background-size: cover;
-    min-height: 200px;
+    /*min-height: 200px;*/
+    min-height: 193px;
 }
 
 #header-banner-wrapper div.slogan {
@@ -192,7 +193,6 @@ thead tr th, thead tr td, tbody tr th, tbody tr td { padding: 8px; line-height: 
     background: url(../images/local/bg_nav.png) top left repeat;
     padding: 3px 0;
     margin-top: 20px;
-    line-height: 36px;
 }
 
 #main-navigation-inside {
@@ -204,8 +204,11 @@ thead tr th, thead tr td, tbody tr th, tbody tr td { padding: 8px; line-height: 
     text-align: center;
 }
 
-#main-navigation-inside ul.menu li {
+#main-navigation-inside ul.menu  {
 	display: inline-block;
+}
+
+#main-navigation-inside ul.menu li {
 	padding: 0 15px;
 	font-size: 14px;
 	font-weight: 700;
@@ -217,7 +220,7 @@ thead tr th, thead tr td, tbody tr th, tbody tr td { padding: 8px; line-height: 
 	padding: 21px 5px;
 	color: #ddd;
 	text-decoration: none;
-	transition:none;
+	transition:none;    
 }
 
 #main-navigation-inside ul.menu li a span {
@@ -482,6 +485,7 @@ input.form-text, textarea.form-textarea {
 	-moz-border-radius: 3px;
 	border-radius: 3px;
 	padding: 2px 10px;
+    /*width: 50%;*/
 }
 
 input.form-text:focus, textarea.form-textarea:focus {
@@ -490,12 +494,55 @@ input.form-text:focus, textarea.form-textarea:focus {
 
 textarea.form-textarea {
 	font-size:14px;
-	width: 100%;
 }
 
 .marker, .form-required {
     color: #666666;
 }
+
+.resizable-textarea .grippie {
+    /*width: 50%;*/
+}
+
+/* blog */
+
+/* sidebar second */
+.widget_sidebar {
+	
+    color: #666666
+}
+
+.widget_sidebar h3 {
+	font-weight: bold;
+	font-size: 14px;
+	text-transform: uppercase;
+    text-shadow: 1px 1px 1px #FFFFFF;
+}
+
+/* blog title */
+#block-system-main a {
+    color: #E54D1B;
+    text-decoration: none;
+}
+
+/* tags */
+
+.field-name-field-tagss {
+margin: 20px 0;
+color: #ccc;
+}
+
+.field-name-field-tagss a {
+    font-size: 14px;
+    background: #f0f0f0;
+    display: inline-block;
+    padding: 5px 10px;
+    margin: 0 5px 5px 0;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+}
+
 
 /* footer */
 #footer { 
@@ -637,7 +684,7 @@ ul.menu { margin: 0; padding: 0; }
 
 ul.menu li { list-style-position: inside; padding: 15px 0 15px 0; margin:0; border-bottom: 1px dashed #ddd;}
 
-ul.menu li a { color: #999; font-size: 14px; line-height: 150%; display: inline-block; }
+ul.menu li a { color: #999; font-size: 14px; display: inline-block; }
 
 ul.menu li a:hover, ul.menu li a.active { text-decoration: none;}
 
@@ -651,9 +698,15 @@ ul.menu li.expanded ul { padding-left: 25px; border-top: 1px dashed #ddd; margin
 #header ul.menu, #top-content ul.menu, #bottom-content ul.menu { text-align: center; }
 
 #header-top ul.menu li, #header ul.menu li, #main-navigation ul.menu li, #top-content ul.menu li,
-#bottom-content ul.menu li { display: inline-block; background: none; list-style-type:none; border: none; padding: 0;}
+#bottom-content ul.menu li { 
+    display: inline-block; 
+    background: none; 
+    list-style-type:none; 
+    border: none; 
+    padding: 0;
+}
 
-#header ul.menu li a, #top-content ul.menu li a, #bottom-content ul.menu li a { padding: 15px 20px; }
+#header ul.menu li a, #top-content ul.menu li a, #bottom-content ul.menu li a { padding: 5px 20px; }
 
 #header-top ul.menu ul, #header ul.menu ul, #main-navigation ul.menu ul, #top-content ul.menu ul,
 #bottom-content ul.menu ul { display: none; }
@@ -662,7 +715,11 @@ ul.menu li.expanded ul { padding-left: 25px; border-top: 1px dashed #ddd; margin
 #header-top ul.menu li a { font-size: 13px; text-transform: capitalize;  padding: 16px 20px 16px; }
 
 /*main-navigation*/
-#main-navigation ul.menu li a { text-transform: uppercase; font-weight: 700; padding: 20px; }
+#main-navigation ul.menu li a { 
+    text-transform: uppercase; 
+    font-weight: 700; 
+    padding: 0px 20px 0px 20px; 
+}
 
 #main-navigation ul.menu ul li a, #header-top ul.menu ul li a  { padding: 15px 20px; text-transform: capitalize; font-weight: 400; font-size: 13px; border: 1px solid #eaeaea; border-top: none; line-height: 150%; }
 
