--- a/site/sites/all/themes/sunrise/css/style.css
+++ b/site/sites/all/themes/sunrise/css/style.css
@@ -925,21 +925,47 @@ ul.links li { margin: 0; }
 .breadcrumb > li { margin: 0 2px 0 0; display: inline; }
 
 /* Search block */
-#header-top #block-search-form { margin: 0; float: right;}
 
-#header-top #block-search-form .form-item { margin:0; }
-
-#header-top #block-search-form input.form-text { border: none; padding: 15px 40px 15px 15px; font-size: 13px; width: 180px; 
--webkit-border-radius: 0; -moz-border-radius: 0; border-radius: 0; -webkit-appearance: none; min-height: 52px; }
-
-#header-top #block-search-form input.form-text:focus { width: 240px; background-color: #444; color: #fff;}
-
-#block-search-form .form-actions, .sidebar-search-block .form-actions { position: absolute; top:0px; right: 20px; color: #999; font-size: 16px;}
-
-.logged-in #block-search-form .form-actions, .logged-in .sidebar-search-block .form-actions { right: 10px; }
+#block-search-form .form-actions, .sidebar-search-block .form-actions { 
+    position: absolute; 
+    top:0px; 
+    color: #fff; 
+    font-size: 16px;
+}
 
 #block-search-form .form-actions:after, .sidebar-search-block .form-actions:after { 
-font-family: 'Glyphicons Halflings'; content: "\e003"; position: absolute; top:16px; left:0; z-index: 0; }
+    font-family: 'Glyphicons Halflings'; 
+    content: "\e003"; 
+    position: absolute; 
+    top:3px; 
+    z-index: 0; 
+    padding: 1px 8px;
+}
+
+#block-search-form .form-actions, .sidebar-search-block .form-actions  {
+	border:1px solid #ccc;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	background: #fff;
+}
+
+#block-search-form .form-actions, .sidebar-search-block .form-actions input[type="submit"] {
+    width: 0px;
+    margin: 0px 1px;
+    height: 28px;
+    padding: 10px 15px;
+}
+
+#block-search-form .form-actions, .sidebar-search-block .form-actions {
+    border: 0;
+}
+
+#block-search-form .form-item, .sidebar-search-block .form-item input.form-text{
+    width: 90%;
+    height: auto;
+    margin-bottom: inherit;
+}
 
 /*polls*/
 .poll .vote-form { text-align: left; }
