--- a/site/sites/all/themes/sunrise/css/style.css
+++ b/site/sites/all/themes/sunrise/css/style.css
@@ -54,11 +54,16 @@ body {
 
 /*Heading*/
 h1, h2, h3, h4, h5, h6 { 
-    font-weight: 700; 
-    line-height: 120%; 
+    font-weight: bold; 
+    /*line-height: 120%; 
     padding: 0; 
-    margin: 20px 0 10px 0; 
+    margin: 20px 0 10px 0; */
+    
+    margin-top: 0px;
+    margin-bottom: 0px;
+    
     font-family: 'Open Sans', sans-serif; 
+    color:#666666;
 }
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { color: #444; }
@@ -222,6 +227,7 @@ thead tr th, thead tr td, tbody tr th, tbody tr td { padding: 8px; line-height: 
 	font-size: 60px;
 	font-weight: 900;
 	margin-bottom: 25px;
+    color:#fff;
 }
 
 #header-banner-wrapper div.slogan p {
